--- a/build.config
+++ b/build.config
@@ -25,7 +25,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
 #CONFIG_FIRMWARE_INCLUDE_XFRM=y
-
+CONFIG_FIRMWARE_INCLUDE_SAMBA36=y
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
 
@@ -196,3 +196,4 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Reduce trx image size
 #CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+
